--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#689f38"/>
-            <corners android:radius="10dp" />
+            <solid android:color="#1D7E75"/>
+            <corners android:radius="16dp" />
         </shape>
     </item>
 </selector>
