--- a/app/src/main/res/layout/base_main_layout.xml
+++ b/app/src/main/res/layout/base_main_layout.xml
@@ -7,19 +7,19 @@
 
 
     <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:titleTextColor="@color/white"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
+        android:background="?attr/colorPrimary"
+        app:titleTextColor="@color/white" />
 
 
     <LinearLayout
-        android:layout_below="@+id/toolbar"
         android:id="@+id/ll_base_main_layout_content"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:orientation="vertical" />
 
     <View
         android:layout_below="@+id/toolbar"
