--- a/app/src/main/res/layout/drawer_activity.xml
+++ b/app/src/main/res/layout/drawer_activity.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:background="#31C5B7"
         />
    <!-- app:headerLayout="@layout/nav_header_main"-->
 
